# Surfacia

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  DEPLOYMENT_GUIDE.md  LICENSE  MANIFEST.in  PYPI_PUBLISHING_GUIDE.md  QUICK_DEPLOY_GUIDE.md  README.md  README2.md  README_DEPLOYMENT.md  READTHEDOCS_DEPLOY_GUIDE.md  Surfacia_Complete_Tutorial.ipynb  Surfacia_jupyterV3.0.1 (2) (3).ipynb  Surfacia_jupyterV3.0.1 (2) (3).py  Surfacia_jupyterV3.0.1 (2).py  Surfacia_jupyterV3.0.3.ipynb  XGB-Stepregression-symV2-Cokp.py  docs_framework_design.md  extract_element_first.py  publish_to_pypi.py  pyproject.toml  quick_publish.bat  quick_publish.sh  readMultiwfn.py  requirements.txt  setup.py  smi2xyz.py  split_featurematrix.py  xyz2gaussian.py
.git_backup/: config  index
.git_backup/refs/heads/: master
config/: ESP_descriptor.txt1  setting.ini  sub.xyz1  template.com
docs/: Makefile  README.md  requirements.txt
docs/source/: changelog.rst  citation.rst  conf.py  contributing.rst  index.rst  license.rst
docs/source/_static/css/: custom.css
docs/source/api/: commands.rst  core.rst  descriptors.rst  index.rst  ml.rst  shap_viz.rst  utils.rst  visualization.rst  workflow.rst
docs/source/commands/: index.rst  ml_analysis.rst  mol_drawer.rst  mol_viewer.rst  rerun_gaussian.rst  shap_viz.rst  utilities.rst  workflow.rst
docs/source/descriptors/: electronic_properties.rst  index.rst  mqsa_modes.rst  size_and_shape.rst  surface_analysis.rst
docs/source/examples/: basic_molecules.rst  complex_systems.rst  custom_workflows.rst  index.rst  machine_learning.rst  mode3_top20_remote_debug.rst
docs/source/getting_started/: basic_concepts.rst  index.rst  installation.rst  quick_start.rst
docs/source/integrations/: index.rst  mcp_server.rst  mcp_server_zh.rst
docs/source/tutorials/: advanced_analysis.rst  basic_workflow.rst  custom_descriptors.rst  index.rst  machine_learning.rst
docs/source/user_guide/: advanced_usage.rst  best_practices.rst  index.rst  spes.rst  troubleshooting.rst  workflows.rst
scripts/: surfacia_main.py
surfacia/: __init__.py  cli.py  extract_element_first.py  extract_substructure.py  fchk2matches.py  machine_learning.py  readMultiwfn.py  run_gaussian.py  smi2xyz.py  xyz2gaussian.py
surfacia/benchmark/: __init__.py  descriptor_matrices.py
surfacia/core/: __init__.py  descriptors.py  gaussian.py  multiwfn.py  rerun_gaussian.py  smi2xyz.py  workflow.py  xtb_opt.py
surfacia/features/: __init__.py  atom_properties.py  fragment_match.py  loffi.py
surfacia/mcp/: __init__.py  server.py  shap_launcher.py  tooling.py  utils.py
surfacia/ml/: __init__.py  chem_ml_analyzer_v2.py  spes.py
surfacia/utils/: __init__.py  chem_utils.py  file_utils.py  mol_properties.py
surfacia/visualization/: __init__.py  debug_multiwfn.py  interactive_shap_viz.py  mol_drawer.py  mol_viewer.py  surface_calc.py
